...
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="DEBIT"
        android:entries="@array/transaction_types"
        android:entryValues="@array/transaction_type_values"
        android:key="@string/key_default_transaction_type"
        android:summary="@string/summary_default_transaction_type"
        android:title="@string/title_default_transaction_type"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_compare_arrows"
        android:key="@string/key_use_double_entry"
        android:summary="@string/summary_use_double_entry"
        android:title="@string/title_use_double_entry" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="@string/key_use_double_entry"
...
