...
            android:enabled="false"
            android:text="@string/btn_fetch_quote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/exchange_rate_text_input_layout" />

        <RadioButton
            android:id="@+id/radio_converted_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/converted_amount_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/converted_amount_text_input_layout" />
...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/radio_converted_amount"
            app:layout_constraintTop_toBottomOf="@id/exchange_rate_text_input_layout">

            <org.gnucash.android.ui.util.widget.CalculatorEditText
                android:id="@+id/input_converted_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/hint_converted_amount" />
        </com.google.android.material.textfield.TextInputLayout>

...
