/*
 * Copyright (c) 2012 - 2015 Ngewi Fet <ngewif@gmail.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package org.gnucash.android.test.ui;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.RootMatchers.withDecorView;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isChecked;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withTagValue;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.assertj.core.api.Assertions.assertThat;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.not;

import android.Manifest;
import android.content.ContentValues;
import android.content.Context;
import android.content.Intent;
import android.content.SharedPreferences;

import androidx.test.espresso.Espresso;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;
import androidx.test.uiautomator.UiDevice;

import org.gnucash.android.R;
import org.gnucash.android.app.GnuCashApplication;
import org.gnucash.android.db.DatabaseSchema;
import org.gnucash.android.db.adapter.AccountsDbAdapter;
import org.gnucash.android.db.adapter.CommoditiesDbAdapter;
import org.gnucash.android.db.adapter.DatabaseAdapter;
import org.gnucash.android.db.adapter.SplitsDbAdapter;
import org.gnucash.android.db.adapter.TransactionsDbAdapter;
import org.gnucash.android.model.Account;
import org.gnucash.android.model.Commodity;
import org.gnucash.android.model.Money;
import org.gnucash.android.model.Split;
import org.gnucash.android.model.Transaction;
import org.gnucash.android.model.TransactionType;
import org.gnucash.android.receivers.TransactionRecorder;
import org.gnucash.android.test.ui.util.DisableAnimationsRule;
import org.gnucash.android.ui.common.UxArgument;
import org.gnucash.android.ui.settings.PreferenceActivity;
import org.gnucash.android.ui.transaction.TransactionFormFragment;
import org.gnucash.android.ui.transaction.TransactionsActivity;
import org.junit.After;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.ClassRule;
import org.junit.Rule;
import org.junit.Test;

import java.math.BigDecimal;
import java.text.NumberFormat;
import java.util.List;
import java.util.Locale;

public class TransactionsActivityTest extends GnuAndroidTest {
    private static final String TRANSACTION_AMOUNT = "9.99";
    private static final String TRANSACTION_NAME = "Pizza";
    private static final String TRANSACTIONS_ACCOUNT_UID = "transactions-account";
    private static final String TRANSACTIONS_ACCOUNT_NAME = "Transactions Account";

    private static final String TRANSFER_ACCOUNT_NAME = "Transfer account";
    private static final String TRANSFER_ACCOUNT_UID = "transfer_account";
    private static final String CURRENCY_CODE = "USD";
    private static Commodity COMMODITY = Commodity.DEFAULT_COMMODITY;

    private Transaction mTransaction;
    private long mTransactionTimeMillis;

    private static AccountsDbAdapter mAccountsDbAdapter;
    private static TransactionsDbAdapter mTransactionsDbAdapter;
    private static SplitsDbAdapter mSplitsDbAdapter;
    private static CommoditiesDbAdapter commoditiesDbAdapter;
    private TransactionsActivity mTransactionsActivity;

    @Rule
    public GrantPermissionRule animationPermissionsRule = GrantPermissionRule.grant(Manifest.permission.SET_ANIMATION_SCALE);

    @ClassRule
    public static DisableAnimationsRule disableAnimationsRule = new DisableAnimationsRule();

    @Rule
    public ActivityTestRule<TransactionsActivity> mActivityRule =
        new ActivityTestRule<>(TransactionsActivity.class, true, false);

    private Account mBaseAccount;
    private Account mTransferAccount;

    @BeforeClass
    public static void prepareTestCase() {
        Context context = GnuCashApplication.getAppContext();
        preventFirstRunDialogs(context);

        mAccountsDbAdapter = AccountsDbAdapter.getInstance();
        mTransactionsDbAdapter = mAccountsDbAdapter.transactionsDbAdapter;
        mSplitsDbAdapter = mTransactionsDbAdapter.splitsDbAdapter;
        commoditiesDbAdapter = mAccountsDbAdapter.commoditiesDbAdapter;
        COMMODITY = commoditiesDbAdapter.getCommodity(CURRENCY_CODE);
    }

    @Before
    public void setUp() throws Exception {
        setDoubleEntryEnabled(true);
        setDefaultTransactionType(TransactionType.DEBIT);

        mAccountsDbAdapter.deleteAllRecords();

        mBaseAccount = new Account(TRANSACTIONS_ACCOUNT_NAME, COMMODITY);
        mBaseAccount.setUID(TRANSACTIONS_ACCOUNT_UID);
        mAccountsDbAdapter.addRecord(mBaseAccount, DatabaseAdapter.UpdateMethod.insert);

        mTransferAccount = new Account(TRANSFER_ACCOUNT_NAME, COMMODITY);
        mTransferAccount.setUID(TRANSFER_ACCOUNT_UID);
        mAccountsDbAdapter.addRecord(mTransferAccount, DatabaseAdapter.UpdateMethod.insert);

        assertThat(mAccountsDbAdapter.getRecordsCount()).isEqualTo(3); //including ROOT account

        mTransactionTimeMillis = System.currentTimeMillis();
        mTransaction = new Transaction(TRANSACTION_NAME);
        mTransaction.setCommodity(COMMODITY);
        mTransaction.setNote("What up?");
        mTransaction.setTime(mTransactionTimeMillis);
        Split split = new Split(new Money(TRANSACTION_AMOUNT, CURRENCY_CODE), TRANSACTIONS_ACCOUNT_UID);
        split.setType(TransactionType.DEBIT);

        mTransaction.addSplit(split);
        mTransaction.addSplit(split.createPair(TRANSFER_ACCOUNT_UID));

        mTransactionsDbAdapter.addRecord(mTransaction, DatabaseAdapter.UpdateMethod.insert);
        assertThat(mTransactionsDbAdapter.getRecordsCount()).isEqualTo(1);

        Intent intent = new Intent(Intent.ACTION_VIEW);
        intent.putExtra(UxArgument.SELECTED_ACCOUNT_UID, TRANSACTIONS_ACCOUNT_UID);
        mTransactionsActivity = mActivityRule.launchActivity(intent);
    }


    private void validateTransactionListDisplayed() {
        onView(allOf(withId(android.R.id.list), withTagValue(is("transactions"))))
            .check(matches(isDisplayed()));
    }

    private int getTransactionCount() {
        return mTransactionsDbAdapter.getAllTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID).size();
    }

    private void validateTimeInput(long timeMillis) {
        String expectedValue = TransactionFormFragment.DATE_FORMATTER.print(timeMillis);
        onView(withId(R.id.input_date)).check(matches(withText(expectedValue)));

        expectedValue = TransactionFormFragment.TIME_FORMATTER.print(timeMillis);
        onView(withId(R.id.input_time)).check(matches(withText(expectedValue)));
    }

    @Test
    public void testAddTransactionShouldRequireAmount() {
        validateTransactionListDisplayed();

        int beforeCount = mTransactionsDbAdapter.getTransactionsCount(TRANSACTIONS_ACCOUNT_UID);
        onView(withId(R.id.fab_create_transaction)).perform(click());

        onView(withId(R.id.input_transaction_name))
            .check(matches(isDisplayed()))
            .perform(typeText("Lunch"));

        Espresso.closeSoftKeyboard();

        onView(withId(R.id.menu_save))
            .check(matches(isDisplayed()))
            .perform(click());
        onView(withText(R.string.title_add_transaction)).check(matches(isDisplayed()));

        assertToastDisplayed(R.string.toast_transaction_amount_required);

        int afterCount = mTransactionsDbAdapter.getTransactionsCount(TRANSACTIONS_ACCOUNT_UID);
        assertThat(afterCount).isEqualTo(beforeCount);

    }

    /**
     * Checks that a specific toast message is displayed
     *
     * @param toastString String that should be displayed
     */
    private void assertToastDisplayed(int toastString) {
        UiDevice.getInstance(InstrumentationRegistry.getInstrumentation()).waitForIdle();
        onView(withText(toastString))
            .inRoot(withDecorView(not(mTransactionsActivity.getWindow().getDecorView())))
            .check(matches(isDisplayed()));
    }


    private void validateEditTransactionFields(Transaction transaction) {

        onView(withId(R.id.input_transaction_name)).check(matches(withText(transaction.getDescription())));

        Money balance = transaction.getBalance(TRANSACTIONS_ACCOUNT_UID);
        NumberFormat formatter = NumberFormat.getInstance(Locale.getDefault());
        formatter.setMinimumFractionDigits(2);
        formatter.setMaximumFractionDigits(2);
        onView(withId(R.id.input_transaction_amount)).check(matches(withText(formatter.format(balance.toDouble()))));
        onView(withId(R.id.input_date)).check(matches(withText(TransactionFormFragment.DATE_FORMATTER.print(transaction.getTimeMillis()))));
        onView(withId(R.id.input_time)).check(matches(withText(TransactionFormFragment.TIME_FORMATTER.print(transaction.getTimeMillis()))));
        onView(withId(R.id.notes)).check(matches(withText(transaction.getNote())));

        validateTimeInput(transaction.getTimeMillis());
    }

    //TODO: Add test for only one account but with double-entry enabled
    @Test
    public void testAddTransaction() {
        setDefaultTransactionType(TransactionType.DEBIT);
        validateTransactionListDisplayed();

        onView(withId(R.id.fab_create_transaction)).perform(click());

        onView(withId(R.id.input_transaction_name)).perform(typeText("Lunch"));
        Espresso.closeSoftKeyboard();
        onView(withId(R.id.input_transaction_amount)).perform(typeText("899"));
        Espresso.closeSoftKeyboard();
        onView(withId(R.id.input_transaction_type))
            .check(matches(allOf(isDisplayed(), withText(R.string.label_receive))))
            .perform(click())
            .check(matches(withText(R.string.label_spend)));

        String expectedValue = NumberFormat.getInstance().format(-899);
        onView(withId(R.id.input_transaction_amount)).check(matches(withText(expectedValue)));

        int transactionsCount = getTransactionCount();
        onView(withId(R.id.menu_save)).perform(click());

        validateTransactionListDisplayed();

        List<Transaction> transactions = mTransactionsDbAdapter.getAllTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID);
        assertThat(transactions).hasSize(2);
        Transaction transaction = transactions.get(0);
        assertThat(transaction.getSplits()).hasSize(2);

        assertThat(getTransactionCount()).isEqualTo(transactionsCount + 1);
    }

    @Test
    public void testAddMultiCurrencyTransaction() {
        mTransactionsDbAdapter.deleteTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID);

        Commodity euro = Commodity.getInstance("EUR");
        Account euroAccount = new Account("Euro Konto", euro);
        mAccountsDbAdapter.addRecord(euroAccount);

        int transactionCount = mTransactionsDbAdapter.getTransactionsCount(TRANSACTIONS_ACCOUNT_UID);
        setDefaultTransactionType(TransactionType.DEBIT);
        validateTransactionListDisplayed();

        onView(withId(R.id.fab_create_transaction)).perform(click());

        String transactionName = "Multicurrency lunch";
        onView(withId(R.id.input_transaction_name)).perform(typeText(transactionName));
        onView(withId(R.id.input_transaction_amount)).perform(typeText("10"));
        Espresso.pressBack(); //close calculator keyboard

        onView(withId(R.id.input_transfer_account_spinner)).perform(click());
        onView(withText(euroAccount.getFullName()))
            .check(matches(isDisplayed()))
            .perform(click());

        onView(withId(R.id.menu_save)).perform(click());

        onView(withText(R.string.msg_provide_exchange_rate)).check(matches(isDisplayed()));
        onView(withId(R.id.radio_converted_amount)).perform(click());
        onView(withId(R.id.input_converted_amount)).perform(typeText("5"));
        Espresso.closeSoftKeyboard();
        onView(withId(BUTTON_POSITIVE)).perform(click());

        List<Transaction> allTransactions = mTransactionsDbAdapter.getAllTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID);
        assertThat(allTransactions).hasSize(transactionCount + 1);
        Transaction multiTrans = allTransactions.get(0);
        assertThat(multiTrans.getSplits()).hasSize(2);
        assertThat(multiTrans.getSplits()).extracting("accountUID")
            .contains(TRANSACTIONS_ACCOUNT_UID)
            .contains(euroAccount.getUID());

        Split euroSplit = multiTrans.getSplits(euroAccount.getUID()).get(0);
        Money expectedQty = new Money("5", euro.getCurrencyCode());
        Money expectedValue = new Money(BigDecimal.TEN, COMMODITY);
        assertThat(euroSplit.getQuantity()).isEqualTo(expectedQty);
        assertThat(euroSplit.getValue()).isEqualTo(expectedValue);

        Split usdSplit = multiTrans.getSplits(TRANSACTIONS_ACCOUNT_UID).get(0);
        assertThat(usdSplit.getQuantity()).isEqualTo(expectedValue);
        assertThat(usdSplit.getValue()).isEqualTo(expectedValue);
    }

    @Test
    public void testEditTransaction() {
        validateTransactionListDisplayed();

        onView(withId(R.id.edit_transaction)).perform(click());

        validateEditTransactionFields(mTransaction);

        String trnName = "Pasta";
        onView(withId(R.id.input_transaction_name)).perform(clearText(), typeText(trnName));
        onView(withId(R.id.menu_save)).perform(click());

        Transaction editedTransaction = mTransactionsDbAdapter.getRecord(mTransaction.getUID());
        assertThat(editedTransaction.getDescription()).isEqualTo(trnName);
        assertThat(editedTransaction.getSplits()).hasSize(2);

        Split split = mTransaction.getSplits(TRANSACTIONS_ACCOUNT_UID).get(0);
        Split editedSplit = editedTransaction.getSplits(TRANSACTIONS_ACCOUNT_UID).get(0);
        assertThat(split.isEquivalentTo(editedSplit)).isTrue();

        split = mTransaction.getSplits(TRANSFER_ACCOUNT_UID).get(0);
        editedSplit = editedTransaction.getSplits(TRANSFER_ACCOUNT_UID).get(0);
        assertThat(split.isEquivalentTo(editedSplit)).isTrue();
    }

    /**
     * Tests that transactions splits are automatically balanced and an imbalance account will be created
     * This test case assumes that single entry is used
     */
    //TODO: move this to the unit tests
    public void testAutoBalanceTransactions() {
        Context context = GnuCashApplication.getAppContext();
        setDoubleEntryEnabled(false);
        mTransactionsDbAdapter.deleteAllRecords();

        assertThat(mTransactionsDbAdapter.getRecordsCount()).isEqualTo(0);
        String imbalanceAcctUID = mAccountsDbAdapter.getImbalanceAccountUID(context, COMMODITY);
        assertThat(imbalanceAcctUID).isNull();

        validateTransactionListDisplayed();
        onView(withId(R.id.fab_create_transaction)).perform(click());
        onView(withId(R.id.fragment_transaction_form)).check(matches(isDisplayed()));

        onView(withId(R.id.input_transaction_name)).perform(typeText("Autobalance"));
        onView(withId(R.id.input_transaction_amount)).perform(typeText("499"));

        //no double entry so no split editor
        //TODO: check that the split drawable is not displayed
        onView(withId(R.id.menu_save)).perform(click());

        assertThat(mTransactionsDbAdapter.getRecordsCount()).isEqualTo(1);
        Transaction transaction = mTransactionsDbAdapter.getAllTransactions().get(0);
        assertThat(transaction.getSplits()).hasSize(2);
        imbalanceAcctUID = mAccountsDbAdapter.getImbalanceAccountUID(context, COMMODITY);
        assertThat(imbalanceAcctUID).isNotNull();
        assertThat(imbalanceAcctUID).isNotEmpty();
        assertThat(mAccountsDbAdapter.isHiddenAccount(imbalanceAcctUID)).isTrue(); //imbalance account should be hidden in single entry mode

        assertThat(transaction.getSplits()).extracting("mAccountUID").contains(imbalanceAcctUID);

    }

    /**
     * Tests input of transaction splits using the split editor.
     * Also validates that the imbalance from the split editor will be automatically added as a split
     * //FIXME: find a more reliable way to test opening of the split editor
     */
    @Test
    public void testSplitEditor() {
        Context context = GnuCashApplication.getAppContext();
        setDefaultTransactionType(TransactionType.DEBIT);
        mTransactionsDbAdapter.deleteAllRecords();

        //when we start there should be no imbalance account in the system
        String imbalanceAcctUID = mAccountsDbAdapter.getImbalanceAccountUID(context, COMMODITY);
        assertThat(imbalanceAcctUID).isNull();

        validateTransactionListDisplayed();
        onView(withId(R.id.fab_create_transaction)).perform(click());

        onView(withId(R.id.input_transaction_name)).perform(typeText("Autobalance"));
        onView(withId(R.id.input_transaction_amount)).perform(typeText("499"));
        Espresso.closeSoftKeyboard();
        onView(withId(R.id.btn_split_editor)).perform(click());

        onView(withId(R.id.split_list_layout)).check(matches(allOf(isDisplayed(), hasDescendant(withId(R.id.input_split_amount)))));

        onView(allOf(withId(R.id.input_split_amount), withText("-499"))).perform(clearText());
        onView(allOf(withId(R.id.input_split_amount), withText(""))).perform(typeText("400"));

        onView(withId(R.id.menu_save)).perform(click());
        //after we use split editor, we should not be able to toggle the transaction type
        onView(withId(R.id.input_transaction_type)).check(matches(not(isDisplayed())));

        onView(withId(R.id.menu_save)).perform(click());

        List<Transaction> transactions = mTransactionsDbAdapter.getAllTransactions();
        assertThat(transactions).hasSize(1);

        Transaction transaction = transactions.get(0);

        assertThat(transaction.getSplits()).hasSize(3); //auto-balanced
        imbalanceAcctUID = mAccountsDbAdapter.getImbalanceAccountUID(context, COMMODITY);
        assertThat(imbalanceAcctUID).isNotNull();
        assertThat(imbalanceAcctUID).isNotEmpty();
        assertThat(mAccountsDbAdapter.isHiddenAccount(imbalanceAcctUID)).isFalse();

        //at least one split will belong to the imbalance account
        assertThat(transaction.getSplits()).extracting("accountUID").contains(imbalanceAcctUID);

        List<Split> imbalanceSplits = mSplitsDbAdapter.getSplitsForTransactionInAccount(transaction.getUID(), imbalanceAcctUID);
        assertThat(imbalanceSplits).hasSize(1);

        Split split = imbalanceSplits.get(0);
        assertThat(split.getValue().asBigDecimal()).isEqualTo(new BigDecimal("99.00"));
        assertThat(split.getType()).isEqualTo(TransactionType.CREDIT);
    }


    private void setDoubleEntryEnabled(boolean enabled) {
        Context context = GnuCashApplication.getAppContext();
        SharedPreferences prefs = PreferenceActivity.getActiveBookSharedPreferences(context);
        prefs.edit()
            .putBoolean(context.getString(R.string.key_use_double_entry), enabled)
            .apply();
    }

    @Test
    public void testDefaultTransactionType() {
        setDefaultTransactionType(TransactionType.CREDIT);

        onView(withId(R.id.fab_create_transaction)).perform(click());
        onView(withId(R.id.input_transaction_type)).check(matches(allOf(isChecked(), withText(R.string.label_spend))));
    }

    private void setDefaultTransactionType(TransactionType type) {
        Context context = GnuCashApplication.getAppContext();
        SharedPreferences prefs = PreferenceActivity.getActiveBookSharedPreferences(context);
        prefs.edit()
            .putString(context.getString(R.string.key_default_transaction_type), type.value)
            .commit();
    }

    //FIXME: Improve on this test
    public void childAccountsShouldUseParentTransferAccountSetting() {
        Account transferAccount = new Account("New Transfer Acct");
        mAccountsDbAdapter.addRecord(transferAccount, DatabaseAdapter.UpdateMethod.insert);
        mAccountsDbAdapter.addRecord(new Account("Higher account"), DatabaseAdapter.UpdateMethod.insert);

        Account childAccount = new Account("Child Account");
        childAccount.setParentUID(TRANSACTIONS_ACCOUNT_UID);
        mAccountsDbAdapter.addRecord(childAccount, DatabaseAdapter.UpdateMethod.insert);
        ContentValues contentValues = new ContentValues();
        contentValues.put(DatabaseSchema.AccountEntry.COLUMN_DEFAULT_TRANSFER_ACCOUNT_UID, transferAccount.getUID());
        mAccountsDbAdapter.updateRecord(TRANSACTIONS_ACCOUNT_UID, contentValues);

        Intent intent = new Intent(mTransactionsActivity, TransactionsActivity.class);
        intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
        intent.setAction(Intent.ACTION_INSERT_OR_EDIT);
        intent.putExtra(UxArgument.SELECTED_ACCOUNT_UID, childAccount.getUID());

        mTransactionsActivity.startActivity(intent);

        onView(withId(R.id.input_transaction_amount)).perform(typeText("1299"));
        clickOnView(R.id.menu_save);

        //if our transfer account has a transaction then the right transfer account was used
        List<Transaction> transactions = mTransactionsDbAdapter.getAllTransactionsForAccount(transferAccount.getUID());
        assertThat(transactions).hasSize(1);
    }

    @Test
    public void testToggleTransactionType() {
        validateTransactionListDisplayed();
        onView(withId(R.id.edit_transaction)).perform(click());

        validateEditTransactionFields(mTransaction);

        onView(withId(R.id.input_transaction_type)).check(matches(
            allOf(isDisplayed(), withText(R.string.label_receive))
        )).perform(click()).check(matches(withText(R.string.label_spend)));

        onView(withId(R.id.input_transaction_amount)).check(matches(withText("-9.99")));

        onView(withId(R.id.menu_save)).perform(click());

        List<Transaction> transactions = mTransactionsDbAdapter.getAllTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID);
        assertThat(transactions).hasSize(1);
        Transaction trx = transactions.get(0);
        assertThat(trx.getSplits()).hasSize(2); //auto-balancing of splits
        assertThat(trx.getBalance(TRANSACTIONS_ACCOUNT_UID).isNegative()).isTrue();
    }

    @Test
    public void testOpenTransactionEditShouldNotModifyTransaction() {
        validateTransactionListDisplayed();

        onView(withId(R.id.edit_transaction)).perform(click());
        validateTimeInput(mTransactionTimeMillis);

        clickOnView(R.id.menu_save);

        List<Transaction> transactions = mTransactionsDbAdapter.getAllTransactionsForAccount(TRANSACTIONS_ACCOUNT_UID);

        assertThat(transactions).hasSize(1);
        Transaction transaction = transactions.get(0);
        assertThat(TRANSACTION_NAME).isEqualTo(transaction.getDescription());
